# twitter-like-web-app

./: .env  Cargo.toml  compose.yaml
migrations/: 00_tweets.sql  01_accounts.sql
src/: database.rs  entities.rs  main.rs  repositories.rs  response.rs  services.rs
src/controller/: root.rs  tweets.rs
src/entities/: tweet.rs
src/repos_impl/: tweets.rs
src/repositories/: tweets.rs
src/services/: tweets.rs
src/views/: home.rs
src/views/partial/: tweet.rs
templates/: _tweet.html  base.html  home.html
